implemented fold changes indexing, compute tags and blank removal fold changes during import [skip ci]